[project]
name = "graphrag-wiki"
version = "0.1.0"
description = "Hands-on GraphRAG over a Wikipedia corpus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
